--- a/.gitignore
+++ b/.gitignore
@@ -140,5 +140,8 @@ dmypy.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python
 
-
+# folders to omit 
 data
+
+# files to omit
+tika-server-1.24.1.jar
