--- a/environment.yml
+++ b/environment.yml
@@ -3,8 +3,11 @@ channels:
   - conda-forge
 dependencies:
   - black
+  - bokeh=2.3.0
+  - dask-jobqueue=0.7.2
   - ipykernel
   - ipywidgets
+  - jupyterlab
   - gensim
   - isort
   - matplotlib
