Added recent changes

--- a/.gitignore
+++ b/.gitignore
@@ -149,6 +149,7 @@ tika-server-1.24.1.jar
 *.jpg
 .vscode
 
-# dask files
-notebooks/tmp*
-notebooks/dask-worker-space
+*.png
+*.jpeg
+*.txt
+*.json
